--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "asciify-image": "^0.1.10",
+    "canvas": "^2.11.2",
     "cloudinary": "^2.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
